--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -26,7 +26,7 @@
     }
 </script>
 
-<div class="fixed bottom-5 right-5">
+<div class="fixed hidden bottom-5 right-5">
     <button class="w-14 h-14 rounded-full bg-gradient-to-r from-purple-500 to-blue-500 flex items-center justify-center shadow-lg hover:shadow-xl transition duration-300">
         <i class="fas fa-plus text-white"></i>
     </button>
